--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: 'PT Sans Narrow';
+  src: url(../assets/PT_Sans_Narrow/PT_Sans-Narrow-Web-Regular.ttf);
+}
+
+body {
+  font-size: calc( 14px + 0.4vw);
+}
+
+body p {
+  font-family: 'PT Sans Narrow';
+}
+
 .hero {
   min-height: 100vh;
   background-color: black;
