--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,29 +1,177 @@
 @font-face{
+    font-family: 'Futura';
+    src: url(../assets/Futura/FuturaPTCondBold.otf)
+}
+@font-face{
     font-family: 'PT Sans Narrow';
  src: url(../assets/PT_Sans_Narrow/PT_Sans-Narrow-Web-Regular.ttf);
 }    
 
+$amarillo: #ffde5d;
+
 body{
     font-size: calc( 14px + 0.4vw  );
+    position: relative;
+    margin:0;
     p{
         font-family: 'PT Sans Narrow';
+    }
+    & *{
+        box-sizing: border-box;
+        margin:0;
+        padding:0;
+    }
+    .container-fluid{
+        width: 100%;
+        padding: 3rem 0;        
+        .row{
+            display: flex;
+            flex-wrap: wrap;
+            width:100%;
+            .col-md-4{
+                flex:40%;
+                padding:0 10%;
+                box-sizing: border-box;
+            }
+            .col-md-6{
+                flex:50%;
+            }
+            .col-md-8{
+                flex:60%;
+            }
+        }
+    }
+    &.container-fluid:first-child{
+        padding:0;
+    }
+
+    .container{
+        padding:0 10%;
+    }
+
+    .py-5{
+        padding:5rem 0;
+    }
+}
+
+nav#main-navbar{
+    position:fixed;
+    top:1rem;
+    right:1rem;
+    z-index: 999;
+    color:white;
+    transition:all 0.2s ease;
+    .logo-header{
+        display:none;
+    }
+    ul{
+        list-style-type: none;
+        display:flex;
+        width:80vw;
+        justify-content: flex-end;
+        li{
+            text-transform: capitalize;
+            padding:5px 15px;
+            margin-right:1rem;
+            font-family: 'Futura';
+            font-size:1.4rem;
+            align-self: flex-end;
+            cursor:pointer;
+            &.active{
+                border-bottom:2px solid $amarillo;
+            }
+        }
+    }
+    &.dark{
+        width: 100%;
+        right: 0;
+        background: black;
+        top: 0;
+        color: white;
+        padding-bottom: .5rem;
+        display:flex;
+        box-shadow: 0px 2px 11px 1px rgba(112,112,112,1);
+        .logo-header{
+            display: block;
+            height: 3rem;
+            margin-top: .25rem;
+            margin-left: 1rem;
+            img{
+                width:auto;
+                height:100%;
+            }
+        }
+        ul{
+            width:100%;
+        }
     }
 }
 
 .hero{
     min-height:100vh;
     background-color: black;
-    background-image: linear-gradient( #000000aa, #00000022), url(../img/logo_inverso.svg);
+    background-image: linear-gradient( #00000055, #000000aa), url(../img/logo_inverso.svg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: -50vw 50%;
-    color: white;
+    color: #ffffffee;
+    width: 100%;
+    display:flex;
+    .col-md-6{
+        flex:50%;
+    }
     .logo{
         display: flex;
-        padding-right: 10%;
         img{
             width: 100%;
-            height:auto;
+            height: 80%;
+            padding-left: 6%;
+            padding-right: 4%;
+            border-right: 5px solid $amarillo;
+            margin-top: 10%;
+            margin-right: -1%;
+        }
+    }
+    .content{
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        margin:1rem auto;
+        justify-content: center;
+        h3{
+            margin-left: 1rem;
+            padding:1rem;
+            font-family: 'Futura';
+            font-size: 2rem;
+            text-shadow: 1px 2px 3px #ffffff44;
+            transition: all .2s ease-in-out;
+            a{
+                text-decoration: none;
+                color:#ffffffee;
+                &:visited{
+                    color: #ffffffee;
+                }
+            }
+            &.resalte{
+                text-shadow: 0px 4px 6px $amarillo;
+                &:after{
+                    content:'';
+                    margin-bottom:-6px;
+                    margin-left:6px;
+                    width:1.8rem;
+                    height:1.8rem;
+                    display: inline-block;
+                    background:url(../img/logo_inverso.svg);
+                    background-repeat: no-repeat;
+                    background-size: 100%;
+                }
+                &:hover{
+                    transform:scale(1.1) translateX(3rem);
+                }
+            }
+        }
+        hr{
+            width:50%;
         }
     }
 }
@@ -31,6 +179,102 @@ body{
 .content-1{
     background-image: linear-gradient( #ffffffaa, #ffffffaa), url(../img/logo-left-gray.svg);
     background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: 35vw 50%;
+    background-size: 70%;
+    background-position: 50vw 50%;
+}
+
+.content-2{
+    background-image: linear-gradient( #000000aa, #000000aa), url(../img/logo-right-gray.svg);
+    background-repeat: no-repeat;
+    background-size: 70%;
+    background-position: -20vw 50%;
+}
+
+#porque{
+    background-color:black;
+    color:white;
+    padding: 5rem 0;
+    margin: 3rem 0;
+    line-height: 1.4;
+    h2, h3{
+        color:$amarillo;
+        text-align: center;
+        font-family: 'Futura';
+        font-size:2.5rem;
+        margin-bottom:1rem;
+        text-align: center;
+    }
+    h3{
+        margin-top:1.5rem;
+        font-size:2rem;
+    }
+    span.resaltar{
+        display: block;
+        width: 80%;
+        margin: 0.5rem auto;
+        font-size: 1.4rem;
+        font-family: 'Futura';
+        text-align: center;
+        border-bottom: 1px solid $amarillo;
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+    }  
+    .clientes{
+        display: flex;
+        flex-wrap:wrap;
+        width:75%;
+        margin:1rem auto;
+        h3{
+            width:100%;
+        }  
+        div.container-imagen{
+            width: 40%;
+            flex:40%;
+            margin-right: 5%;
+            padding: 1rem;
+            margin-bottom: 5%;
+            background: white;
+            display: flex;
+            align-items: center;
+            border-radius: 15px;
+            border-top:3px solid black;
+            border-bottom: 3px solid $amarillo;
+            transition:all 0.2s ease-in-out;
+            img{
+                width:80%;
+                height:auto;
+                margin:0 auto;
+            }
+            &:hover{
+                transform:scale(0.95);
+            }
+        }
+    }
+    ul{ 
+        margin:1rem auto;
+        width:80%;
+        display: block;
+        li{
+            font-family: 'PT Sans Narrow';
+            margin:1rem auto;
+        }
+    }
+}
+
+.contenedor-img-sol{
+    display: flex;
+    justify-content: space-around;
+    img{
+        width:45%;
+        height:auto;
+        margin-left:-15%;
+        &:first-child{
+            margin-top:-5%;
+            margin-bottom:5%;
+        }
+        &:last-child{
+            margin-top:5%;
+            margin-bottom:-5%;
+        }
+    }    
 }
