--- a/css/styles.css
+++ b/css/styles.css
@@ -196,12 +196,13 @@ nav#main-navbar.dark ul {
 
 .hero .content h3 {
   margin-left: 1rem;
-  padding: 1rem;
-  font-family: 'Futura';
+  padding: 0.5rem;
+  font-family: 'PT Sans Narrow';
   font-size: 2rem;
   text-shadow: 1px 2px 3px #ffffff44;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
+  font-weight: 400;
 }
 
 .hero .content h3 a {
@@ -215,6 +216,8 @@ nav#main-navbar.dark ul {
 
 .hero .content h3.resalte {
   text-shadow: 0px 4px 6px #ffde5d;
+  padding: 0.8rem;
+  font-family: Futura;
 }
 
 .hero .content h3.resalte:after {
@@ -236,6 +239,8 @@ nav#main-navbar.dark ul {
 
 .hero .content hr {
   width: 50%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .content-1 {
@@ -368,5 +373,161 @@ nav#main-navbar.dark ul {
 .contenedor-img-sol img:last-child {
   margin-top: 5%;
   margin-bottom: -5%;
+}
+
+main#servicios {
+  text-align: center;
+}
+
+main#servicios h2:first-child {
+  font-size: 3rem;
+  font-family: 'Futura';
+}
+
+main#servicios .py-5 {
+  padding: 2rem 0;
+}
+
+main#servicios p {
+  text-align: center;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+main#servicios ul {
+  width: 75%;
+  text-align: left;
+  margin: 0 auto;
+  font-family: 'PT Sans Narrow';
+  -webkit-columns: 2;
+          columns: 2;
+}
+
+main#servicios ul li {
+  padding: 0.5rem;
+}
+
+main#servicios .card {
+  border: 1px solid gray;
+  border-radius: 5px;
+  background-color: white;
+  margin-right: 2rem;
+  min-height: 290px;
+  height: 25vh;
+  max-width: 50vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-shadow: 4px 0 10px #000000aa;
+          box-shadow: 4px 0 10px #000000aa;
+  background-size: cover;
+}
+
+main#servicios .card .nombre {
+  height: 2.5rem;
+  font-family: 'Futura';
+  font-size: 1.8rem;
+  border-top: 1px solid grey;
+  background: white;
+}
+
+main#servicios .card.mantenimiento {
+  background-image: url(../img/exp-berlitz.jpeg);
+}
+
+main#servicios .card.techos {
+  background-image: url(../img/Techos-2.jpeg);
+}
+
+main#servicios .card.instalaciones {
+  background-image: url(../img/instalaciones-1.jpeg);
+}
+
+main#servicios .card.remodelacion {
+  background-image: url(../img/proceso-grua2.jpeg);
+}
+
+main#servicios .card.impermeabilizacion {
+  background-image: url(../img/cubiertas.jpeg);
+  margin: 0 auto;
+}
+
+#contacto {
+  background-color: black;
+  color: white;
+  padding: 5rem 0;
+  margin: 3rem 0;
+  line-height: 1.4;
+  margin-bottom: 0;
+}
+
+#contacto .titulo {
+  text-align: center;
+  font-family: 'Futura';
+  color: #ffde5d;
+  font-size: 3rem;
+}
+
+#contacto form {
+  width: 75%;
+  margin: 0 auto;
+}
+
+#contacto form input, #contacto form textarea {
+  width: 100%;
+  color: #000000;
+  font-family: 'PT Sans Narrow';
+}
+
+#contacto #thankyou_message {
+  width: 75%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  background: black;
+  color: white;
+  padding: 0.5rem 0;
+  font-family: 'PT Sans Narrow';
+}
+
+footer span {
+  display: block;
+  font-size: 0.8rem;
+}
+
+.delay-p1 {
+  -webkit-animation-delay: .1s;
+          animation-delay: .1s;
+}
+
+.delay-p2 {
+  -webkit-animation-delay: .2s;
+          animation-delay: .2s;
+}
+
+.delay-p3 {
+  -webkit-animation-delay: .3s;
+          animation-delay: .3s;
+}
+
+.delay-p4 {
+  -webkit-animation-delay: .4s;
+          animation-delay: .4s;
+}
+
+.delay-p5 {
+  -webkit-animation-delay: .5s;
+          animation-delay: .5s;
 }
 /*# sourceMappingURL=styles.css.map */
