--- a/css/styles.scss
+++ b/css/styles.scss
@@ -140,11 +140,12 @@ nav#main-navbar{
         justify-content: center;
         h3{
             margin-left: 1rem;
-            padding:1rem;
-            font-family: 'Futura';
+            padding:0.5rem;
+            font-family: 'PT Sans Narrow';
             font-size: 2rem;
             text-shadow: 1px 2px 3px #ffffff44;
             transition: all .2s ease-in-out;
+            font-weight: 400;
             a{
                 text-decoration: none;
                 color:#ffffffee;
@@ -154,6 +155,8 @@ nav#main-navbar{
             }
             &.resalte{
                 text-shadow: 0px 4px 6px $amarillo;
+                padding:0.8rem;
+                font-family: Futura;
                 &:after{
                     content:'';
                     margin-bottom:-6px;
@@ -172,6 +175,8 @@ nav#main-navbar{
         }
         hr{
             width:50%;
+            margin-top:1rem;
+            margin-bottom:1rem;
         }
     }
 }
@@ -277,4 +282,130 @@ nav#main-navbar{
             margin-bottom:-5%;
         }
     }    
+}
+
+main#servicios{
+    text-align: center;
+    h2:first-child{
+        font-size:3rem;
+        font-family: 'Futura';
+    }
+    .py-5{
+        padding:2rem 0;
+    }
+
+    p{
+        text-align:center;
+        width:100%;
+        margin-bottom:1rem;
+    }
+    ul{
+        width:75%;
+        text-align:left;
+        margin: 0 auto;
+        font-family: 'PT Sans Narrow';
+        columns: 2;
+        li{
+            padding:0.5rem;
+        }
+    }
+    .card{
+        border:1px solid gray;
+        border-radius:5px;
+        background-color:white;
+        margin-right: 2rem;
+        min-height:290px;
+        height:25vh;
+        max-width: 50vw;
+        display:flex;
+        flex-direction:column;
+        justify-content: flex-end;
+        box-shadow:4px 0 10px #000000aa;
+        background-size:cover;
+        .nombre{
+            height:2.5rem;
+            font-family: 'Futura';
+            font-size:1.8rem;
+            border-top:1px solid grey;
+            background:white;
+        }
+        &.mantenimiento{
+            background-image:url(../img/exp-berlitz.jpeg);
+        }
+        &.techos{
+            background-image:url(../img/Techos-2.jpeg);
+        }
+        &.instalaciones{
+            background-image:url(../img/instalaciones-1.jpeg);
+        }
+        &.remodelacion{
+            background-image:url(../img/proceso-grua2.jpeg);
+        }
+        &.impermeabilizacion{
+            background-image:url(../img/cubiertas.jpeg);
+            margin:0 auto;
+        }    
+    }
+
+}
+
+#contacto{
+    background-color:black;
+    color:white;
+    padding: 5rem 0;
+    margin: 3rem 0;
+    line-height: 1.4;
+    margin-bottom:0;
+    .titulo{
+        text-align: center;
+        font-family: 'Futura';
+        color:$amarillo;
+        font-size: 3rem;
+    }
+
+    form{
+        width:75%;
+        margin:0 auto; 
+        input, textarea{
+            width: 100%;
+            color:#000000;
+            font-family:'PT Sans Narrow';
+        }       
+    }
+
+    #thankyou_message{
+        width:75%;
+        margin:0 auto;
+        text-align: center;
+
+    }
+}
+
+footer{
+    width:100%;
+    text-align:center;    
+    background:black;
+    color:white;
+    padding:0.5rem 0; 
+    font-family: 'PT Sans Narrow';   
+    span{
+        display:block;
+        font-size:0.8rem;
+    }
+}
+
+.delay-p1{
+    animation-delay: .1s;
+}
+.delay-p2{
+    animation-delay: .2s;
+}
+.delay-p3{
+    animation-delay: .3s;
+}
+.delay-p4{
+    animation-delay: .4s;
+}
+.delay-p5{
+    animation-delay: .5s;
 }
