--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,12 @@ nav#main-navbar.dark ul {
   width: 100%;
 }
 
+.col-md-6 {
+  -webkit-box-flex: 50%;
+      -ms-flex: 50%;
+          flex: 50%;
+}
+
 .hero {
   min-height: 100vh;
   background-color: black;
@@ -155,12 +161,6 @@ nav#main-navbar.dark ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.hero .col-md-6 {
-  -webkit-box-flex: 50%;
-      -ms-flex: 50%;
-          flex: 50%;
 }
 
 .hero .logo {
@@ -506,6 +506,16 @@ footer span {
   font-size: 0.8rem;
 }
 
+footer a {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+footer a:visited {
+  color: gray;
+}
+
 .delay-p1 {
   -webkit-animation-delay: .1s;
           animation-delay: .1s;
@@ -529,5 +539,126 @@ footer span {
 .delay-p5 {
   -webkit-animation-delay: .5s;
           animation-delay: .5s;
+}
+
+@media screen and (max-width: 880px) {
+  nav#main-navbar {
+    width: 100vw;
+    top: 1%;
+    left: 0;
+  }
+  nav#main-navbar ul {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin: 0;
+    padding: 0 0.5rem;
+  }
+  nav#main-navbar ul li {
+    text-align: center;
+    font-size: 1.1rem;
+    margin: 0;
+    line-height: 1;
+  }
+  nav#main-navbar.dark .logo-header {
+    display: none;
+  }
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#000000aa), to(#000000ee)), url(../img/logo-up.svg);
+    background-image: linear-gradient(#000000aa, #000000ee), url(../img/logo-up.svg);
+    background-repeat: no-repeat;
+    background-size: 150%;
+    background-position: 50% 50vh;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .hero .logo img {
+    width: 75%;
+    height: auto;
+    padding: 0;
+    padding-bottom: 2rem;
+    margin: 0 auto;
+    margin-top: 20vh;
+    border-right: none;
+    border-bottom: 5px solid #ffde5d;
+  }
+  .hero .content {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 8vh;
+  }
+  .hero .content h3 {
+    font-size: 1.5rem;
+    padding: 0.2rem;
+    margin-left: 0;
+  }
+  .hero .content h3.resalte {
+    line-height: 1;
+    padding: 0.5rem;
+  }
+  .col-md-6 {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+  }
+  body {
+    font-size: calc(14px + 0.7vw);
+  }
+  body .container {
+    padding: 0 5%;
+  }
+  body .container-fluid {
+    padding: 0 5%;
+  }
+  body .container-fluid .row .col-md-4, body .container-fluid .row .col-md-8, body .container-fluid .row .col-md-6 {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+    padding: 0;
+  }
+  body .py-5 {
+    padding: 2rem 0;
+  }
+  body .content-1 {
+    background-size: 150%;
+    background-position: -10vw 50%;
+  }
+  body .content-2 {
+    background-size: 150%;
+    background-position: 10vw 50%;
+  }
+  body .invertir-orden {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  body .contenedor-img-sol {
+    margin: 2rem auto 0.5rem;
+    margin-right: -2rem;
+  }
+  body #porque .titulo h2, body #porque .resaltar, body #porque h3 {
+    line-height: 1.1;
+  }
+  body #porque ul li {
+    margin: 0.3rem auto;
+  }
+  main#servicios .card {
+    margin: 0;
+    margin-bottom: 1rem;
+    max-width: 100%;
+  }
+  main#servicios .card .nombre {
+    height: auto;
+    line-height: 1.1;
+    padding: 0.2rem 0;
+  }
+  main#servicios ul {
+    width: 90%;
+    -webkit-columns: 1;
+            columns: 1;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
