--- a/css/styles.css
+++ b/css/styles.css
@@ -644,10 +644,12 @@ footer a:visited {
   body .content-1 {
     background-size: 150%;
     background-position: -10vw 50%;
+    background-attachment: fixed;
   }
   body .content-2 {
     background-size: 150%;
     background-position: 10vw 50%;
+    background-attachment: fixed;
   }
   body .invertir-orden {
     -webkit-box-orient: vertical;
