--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,10 +1,12 @@
 @font-face{
     font-family: 'Futura';
-    src: url(../assets/Futura/FuturaPTCondBold.otf)
+    src: url(../assets/Futura/FuturaPTCondBold.otf);
+    font-display: swap;
 }
 @font-face{
     font-family: 'PT Sans Narrow';
- src: url(../assets/PT_Sans_Narrow/PT_Sans-Narrow-Web-Regular.ttf);
+    src: url(../assets/PT_Sans_Narrow/PT_Sans-Narrow-Web-Regular.ttf);
+    font-display: swap;
 }    
 
 $amarillo: #ffde5d;
