--- a/css/styles.scss
+++ b/css/styles.scss
@@ -154,7 +154,7 @@ nav#main-navbar{
         width: 80%;
         margin:1rem auto;
         justify-content: center;
-        h3{
+        h1{
             margin-left: 1rem;
             padding:0.5rem;
             font-family: 'PT Sans Narrow';
@@ -164,13 +164,13 @@ nav#main-navbar{
             font-weight: 400;
             a{
                 text-decoration: none;
-                color:#ffffffee;
+                color:#ffffffee !important;
                 &:visited{
                     color: #ffffffee;
                 }
             }
             &.resalte{
-                text-shadow: 0px 4px 6px $amarillo;
+                text-shadow: 0px 2px 3px $amarillo;
                 padding:0.8rem;
                 font-family: Futura;
                 &:after{
