--- a/css/styles.scss
+++ b/css/styles.scss
@@ -154,7 +154,7 @@ nav#main-navbar{
         width: 80%;
         margin:1rem auto;
         justify-content: center;
-        h1{
+        h1, h3{
             margin-left: 1rem;
             padding:0.5rem;
             font-family: 'PT Sans Narrow';
